feat: 데이터베이스 연결, 블로그 홈 추가
1. 데이터베이스 설정 및 연결 추가
	- 데이터베이스 Blog 모델 추가

2. env 설정 추가
	- PORT, DB_HOST

3. 블로그 홈 추가
	- 블로그 데이터 베이스의 게시글을 로드하여 표시

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,7 +1,4 @@
 // Variable overrides first
-$primary: #900;
-$enable-shadows: true;
-$prefix: 'mo-';
 
 // Then import Bootstrap
 @import '../../node_modules/bootstrap/scss/bootstrap';
@@ -14,4 +11,5 @@ body {
 
 a {
     color: #aab7ff;
+    text-decoration: none;
 }
