feat: show 및 new 기능 및 페이지 스타일링 추가
페이지 및 기능 추가

# show
	- 블로그 홈에서 게시글 클릭시 show 페이지로 이동
	- 게시글 id에 해당하는 글 표시

# new
	- 블로그 홈에서 게시글 추가 클릭시 new 페이지로 이동
	- new 기본적인 html 구성 및 스타일링
	- 게시글 작성 버튼 클릭시 데이터베이스에 저장 후 show 페이지로 이동

--- a/views/blogs/blog.pug
+++ b/views/blogs/blog.pug
@@ -1,9 +1,10 @@
 extends ../layout
 
 block content
-  h1 blog
-  main
+  main.container
+    h1 blog
+    a(class='d-block my-3' href=`/blog/new`) New Post 
     - for(let blog of blogs)
-        a(class='' href='#')= blog.title
+        a(class='' href=`blog//show/${blog.id}`)= blog.title
         p(class='')= blog.description
         tag(class='')= blog.tag
