--- a/views/blogs/blog.pug
+++ b/views/blogs/blog.pug
@@ -5,6 +5,6 @@ block content
     h1 blog
     a(class='d-block my-3' href=`/blog/new`) New Post 
     - for(let blog of blogs)
-        a(class='' href=`blog//show/${blog.id}`)= blog.title
+        a(class='' href=`blog/show/${blog.id}`)= blog.title
         p(class='')= blog.description
         tag(class='')= blog.tag
