--- a/views/blogs/blog.pug
+++ b/views/blogs/blog.pug
@@ -2,19 +2,14 @@ extends ../layout
 
 block content
   main.container
-    div(class='toolbar py-3 py-lg-6')
-      div(class='toolbar-container container-xxl d-flex flex-stack')
-        div(class='toolbar-title d-flex flex-column jestify-content-center felx-wrap me-3')
-          h1(class='heading d-flex fw-bold fx-3 text_dark') blog
-          ul(class='breadcrumb breadcrumb-separatorless fw-semibold fs-7 my-0 pt-1')
-            li(class='breadcrumb-item text-muted')
-              a(href='#') Home 
-            li(class='breadcrumb-item')
-              span(class='bullet bg-gray-400 w-5px h-2px')
-            li(class='breadcrumb-item text-muted') Blog
     a(class='d-block my-3' href=`/blog/new`) New Post 
     div(class='card')
-      - for(let blog of blogs)
-          a(class='' href=`blog/show/${blog.id}`)= blog.title
-          p(class='')= blog.description
-          tag(class='')= blog.tag
+      div(class='card-body p-4')
+        div.row
+          div(class='col m-2')
+            - for(let blog of blogs)
+                a(class='card-title fw-bold fs-4' href=`blog/show/${blog.id}`)= blog.title
+                p(class='card-text fs-5 fw-semibold mt-3 gray-600')= blog.description
+                div(class='d-flex flex-stack flex-wrap mb-2')
+                  span(class='tag badge fw-bold my-2') HTML
+          
