--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,10 +1,16 @@
 doctype html
-html
+html(lang='ko')
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel="preconnect" href="https://fonts.googleapis.com")
     link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
     link(href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500&family=Merriweather:wght@900&display=swap" rel="stylesheet")
+ 
+    script(src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous")
+    link(href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.css" rel="stylesheet")
+    script(src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.js")
+
+
   body
     block content
